# DnDMonsterViewer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  include
src/: CMakeLists.txt  Colors.h  DnDConcepts.c  DnDConcepts.h  Monster.c  Monster.h  MonsterParser.c  MonsterParser.h  Parser.c  Parser.h  Stats.c  Stats.h  Term.c  Term.h  TermDrawer.c  TermDrawer.h  main.c
test/monster/: manyhp.json
test/output/: manyhp.json
